1.11.0
Tweaks to make it possible to use an arbitrary transport
Fix potential race condition

1.10.0
Fix serialization of the sequence ']]>'

1.9.0
Add FLAGS_DEBUG to display the xml returned by the server

1.8.3
Fix compatibility with Android

1.8.2

Forking from timroes project. The only purpose of this version is to have
the fix from 1.8.1 in maven central