@@ -18,14 +18,23 @@ public class DateTimeSerializer implements Serializer {
 	private static final String DATETIME_FORMAT = "yyyyMMdd'T'HHmmss";
 	private final SimpleDateFormat DATE_FORMATER = new SimpleDateFormat(DATETIME_FORMAT);
 
+	private final boolean accepts_null_input;
+
+	public DateTimeSerializer(boolean accepts_null_input) {
+		this.accepts_null_input = accepts_null_input;
+	}
+
+
 	@Override
 	public Object deserialize(Element content) throws XMLRPCException {
 		return deserialize(XMLUtil.getOnlyTextContent(content.getChildNodes()));
 	}
 
 	public Object deserialize(String dateStr) throws XMLRPCException {
-		if (dateStr==null || dateStr.trim().length()==0)
+		if (accepts_null_input && (dateStr==null || dateStr.trim().length()==0)) {
 			return null;
+		}
+
 		try {
 			return Iso8601Deserializer.toDate(dateStr);
 		} catch (Exception ex) {
