@@ -1,3 +1,5 @@
+Add flag ACCEPT_NULL_DATES
+
 1.11.0
 Tweaks to make it possible to use an arbitrary transport
 Fix potential race condition
